--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,8 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.projectlombok:lombok')
-	compile('mysql:mysql-connector-java')
+	//compile('mysql:mysql-connector-java')
+	compile('org.postgresql:postgresql')
 
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 
