--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 #spring.datasource.username=kodilla
 #spring.datasource.password=kodilla
-spring.datasource.url=$(JDBC_DATABASE_URL)
-spring.datasource.username=$(JDBC_DATABASE_USERNAME)
-spring.datasource.password=$(JDBC_DATABASE_PASSWORD)
+spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 
 
 trello.api.endpoint.prod=https://api.trello.com/1/
