--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8888
 #DATABASE CONFIGURATION
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.database=mysql
 spring.jpa.database=postgresql
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
