--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8888
 #DATABASE CONFIGURATION
 spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.database=mysql
+spring.jpa.database=mysql
 spring.jpa.database=postgresql
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
