--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,8 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-mail:1.5.7.RELEASE')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 
+	compile('com.google.code.gson:gson:2.8.2')
+
 //	providedRuntime ("org.springframework.boot:spring-boot-starter-tomcat")
 }
 apply plugin: 'java'
