--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,3 +47,7 @@ info.app.administrator.email=hania.teskaj@test.com
 info.company.name=Kobayashi
 info.company.goal=Our goal
 info.company.phone=800000000
+
+#THYMELEAF
+spring.thymeleaf.mode=LEGACYHTML5
+spring.thymeleaf.cache=false
