--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,6 +29,7 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 #ADMINISTRATION
+admin.name=Hania
 admin.mail=hania.teskaj@gmail.com
 
 trello.api.endpoint.prod=https://api.trello.com/1
@@ -51,3 +52,4 @@ info.company.phone=800000000
 #THYMELEAF
 spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.cache=false
+
